<resources>
    <string name="app_name">ProjectA_MoviePage</string>
    <string name="storyContent">군도, 백성을 구하라! \n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. \n힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다. \n\n쌍칼 도치 vs 백성의 적 조윤 잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈, 삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는 죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다. \n\n뭉치면 백성, 흩어지면 도적! 망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조윤과 한 판 승부를 시작하는데...</string>
    <string name="poster"><b>군도</b></string>
    <string name="short_description">2014.07.23 개봉 \n액션 / 137분</string>
    <string name="good_number">15</string>
    <string name="bad_number">1</string>
    <string name="percentage"><b>예매율</b></string>
    <string name="percentageNumber">5위 1.8%</string>
    <string name="rating"><b>평점</b></string>
    <string name="ratingNumberText">8.2</string>
    <string name="people"><b>누적관객수</b></string>
    <string name="peopleNum">839,399명</string>
    <string name="storyTitle"><b>줄거리</b></string>
    <string name="directorTitle"><b>감독/출연</b></string>
    <string name="directorContent"><b>감독</b> 윤종빈</string>
    <string name="actorContent"><b>출연</b> 하정우(도치), 강동원(조윤)</string>
    <string name="commentTitle"><b>한줄평</b></string>
    <string name="commentWrite"><b>작성하기</b></string>
    <string name="toSeeAll"><b>모두 보기</b></string>
    <string name="reserveBtn"><b>예매하기</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>