<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/percentageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentageNumber"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <RatingBar
            android:id="@+id/ratingNumber"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4.1"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/ratingNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratingNumberText"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/peopleNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peopleNum"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>