<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/image11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="70dp"
                android:lines="1"
                android:text="@string/poster"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/age"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_15"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:lines="2"
                android:text="@string/short_description"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/good_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/good_number"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/good"
                app:layout_constraintTop_toBottomOf="@+id/short_description" />

            <TextView
                android:id="@+id/bad_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/bad_number"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/bad"
                app:layout_constraintTop_toBottomOf="@+id/short_description" />

            <ImageView
                android:id="@+id/good"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_thumb_up"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/short_description" />

            <ImageView
                android:id="@+id/bad"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_thumb_down"
                app:layout_constraintStart_toEndOf="@+id/good_number"
                app:layout_constraintTop_toBottomOf="@+id/short_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/percentageNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentageNumber"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <RatingBar
                    android:id="@+id/ratingNumber"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.1"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/ratingNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratingNumberText"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/peopleNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peopleNum"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/storyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storyTitle"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/storyContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storyContent"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/directorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/directorTitle"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/directorContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/directorContent"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/directorTitle" />

            <TextView
                android:id="@+id/actorContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/actorContent"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/directorContent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/commentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/commentTitle"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_review_selected"
                app:layout_constraintEnd_toStartOf="@+id/commentWrite"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/commentWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/commentWrite"
                android:textColor="@android:color/holo_red_light"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/commentContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lines="8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commentTitle"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toSeeAll"
            android:text="@string/toSeeAll"
            android:textColor="@color/purple_700"
            android:backgroundTint="@color/purple_500" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/kakao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_kakao"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/facebook"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/reserveBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/reserveBtn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/kakao"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
