<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/image11"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="70dp">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:lines="1"
                    android:text="@string/poster"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    />

                <ImageView
                    android:id="@+id/age"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_15"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:lines="2"
                android:text="@string/short_description"
                android:textColor="@color/white"
                android:textSize="10sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/good"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_thumb_up"
                    />
                <TextView
                    android:id="@+id/good_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:lines="1"
                    android:text="@string/good_number"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    />
                <ImageView
                    android:id="@+id/bad"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_thumb_down"
                    />
                <ImageView
                    android:id="@+id/bad_selected"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="-15dp"
                    android:src="@drawable/ic_thumb_down_selected"
                    android:visibility="invisible"
                    />
                <TextView
                    android:id="@+id/bad_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:lines="1"
                    android:text="@string/bad_number"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>